feat: 감사 내보내기 통제 추가
